<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.teammandroid.dairyapplication.activities.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/image"
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBlack"
                android:layout_centerVertical="true" />


            <ImageView
                android:contentDescription="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:visibility="gone"/>

            <com.steelkiwi.library.view.BadgeHolderLayout
                android:layout_alignParentRight="true"
                android:id="@+id/badgeLayout"
                android:layout_width="40dp"
                android:layout_marginRight="20dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                app:bhl_default_badge_background="#8BC34A"
                app:bhl_text_color="@android:color/white"
                app:bhl_text_size="12sp"
                app:bhl_badge_radius="10dp"
                >

                <ImageView
                    android:contentDescription="@string/cart"
                    android:id="@+id/iv_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"/>

            </com.steelkiwi.library.view.BadgeHolderLayout>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/sliderlayout"
        android:background="@color/colorGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar"
        android:layout_margin="20dp">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_wishlist"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/sliderlayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/iv_wishlist"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <RelativeLayout
            android:id="@+id/rl_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mandroid_logo"
            android:visibility="gone"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="textStart"
            android:layout_below="@id/rl_img"
            android:layout_margin="20dp"
            android:visibility="gone"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Name"
            android:textColor="@color/colorBlack"
            android:textSize="26sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_below="@id/rv_images"/>


        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Weight"
            android:textColor="@color/grey_40"
            android:textSize="10sp"
            android:visibility="visible"
            android:layout_below="@id/title" />

        <RelativeLayout
            android:id="@+id/rl_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/ourprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="₹ Price"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/offerprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Name"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:visibility="visible"
                android:layout_below="@id/ourprice"/>

            <TextView
                android:id="@+id/tv_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Name"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/offerprice"
                android:visibility="visible"
                android:layout_below="@id/ourprice"/>

            <LinearLayout
                android:id="@+id/ll_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="15dp"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_remove"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/remove"
                    android:src="@drawable/ic_remove_circle" />

                <TextView
                    android:id="@+id/totalview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorBlack"/>

                <ImageView
                    android:id="@+id/iv_addImg"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/add"
                    android:focusable="true"
                    android:src="@drawable/ic_add_circle" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_20"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            android:layout_below="@id/rl_price">
        </View>

        <TextView
            android:id="@+id/abt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="About the Product"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_below="@id/view"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="o ok ok ok ok"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            android:layout_below="@id/abt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_addCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Add to Cart"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:visibility="visible"
            android:textStyle="bold"
            android:layout_marginRight="2dp"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Continue"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>
