<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:gravity="start"
                android:text="Description"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="MRP"
                android:textSize="12sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/offerprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="8sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_delete_black_24dp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantities :"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_subtotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total: "
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/padding_5"/>

        <TextView
            android:id="@+id/txt_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Rs. 0.0"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/tv_subtotalView"
            android:visibility="visible"
            android:layout_marginTop="@dimen/padding_5"/>

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/remove"
                android:src="@drawable/ic_remove_circle" />

            <TextView
                android:id="@+id/totalview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/zero" />

            <ImageView
                android:id="@+id/iv_addImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:focusable="true"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_add_circle" />
        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:padding="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:id="@+id/btn_booknow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Book Now"
        android:textAlignment="center"
        android:textColor="@color/colorTextWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_455" />

</LinearLayout>